# pymagnific

./: .env.example  .gitignore  README.md  magnific-api-v1-openapi.yaml  pyproject.toml
projects/templates/do3d_textures_2d/: SAMPLE_PROMPT.txt  board.json  project.json  prompts.py  template.json
projects/templates/ecommerce_raw/: board.json  project.json  prompts.json  template.json
scripts/: audit_workspace_remote.py  bootstrap_do3d_textures_2d.py  bootstrap_draft.py
src/pymagnific/: __init__.py  dependencies.py
src/pymagnific/api/: webhook.py
src/pymagnific/cli/: __init__.py  apps.py  auth.py  main.py  project.py  spaces.py  utils.py  webhook.py
src/pymagnific/clients/: magnific_mcp.py  magnific_rest.py  rate_limit.py
src/pymagnific/core/: config.py  exceptions.py  logging.py
src/pymagnific/parsers/: asset_upload.py  board_toon.py  instance_board.py  jobs_from_template.py  node_registry.py  pipeline_prompts.py  pipeline_spawn.py  stage_mapping.py  template_clone.py  workspace_builder.py
src/pymagnific/schemas/: auth.py  (+3 more)
tests/: conftest.py
tests/clients/: test_device_login.py  test_mcp_auth.py  test_rate_limit.py  test_rest_client.py  test_token_storage.py
tests/core/: test_logging.py
tests/fixtures/: pipeline-spec.json
tests/parsers/: test_board_toon.py  test_do3d_textures.py  test_instance_board.py  test_jobs_from_template.py  test_pipeline_prompts.py  test_pipeline_spawn.py  test_template_clone.py  test_templates_validate.py  test_workspace_builder.py
tests/services/: test_sync_checkpoint.py  test_sync_runner.py  test_webhook_service.py
(+23 files in other folders)
