[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pymagnific"
version = "0.1.0"
description = "CLI for Magnific Spaces - REST API key + MCP OAuth"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic-settings>=2.0",
    "mcp>=1.9",
    "uvicorn>=0.30",
    "fastapi>=0.115",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8", "respx>=0.21"]

[project.scripts]
pymagnific = "pymagnific.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pymagnific*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
